--- a/internship/cl_cvshealth_analyticsintern_enterpriseanalytics.rmd
+++ b/internship/cl_cvshealth_analyticsintern_enterpriseanalytics.rmd
@@ -9,7 +9,7 @@ email: "axa@andrew.cmu.edu"
 github: /alejandroxag
 linkedin: /alejandroxag
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-headcolor: 117c8d
+headcolor: 00171c
 docname: 'MISM-BIDA @ CMU'
 pagenum: false
 output: vitae::awesomecv
@@ -29,13 +29,15 @@ greeting <- 'Dear Hiring Manager,'
 goodbye <- 'Kind regards,'
 name <- 'Alejandro Álvarez'
 
-p1 <- 'This is Alejandro Alvarez, a graduate student at Carnegie Mellon University, currently pursuing a master’s degree in Information Systems. I’m applying for the Analytics Intern - Enterprise Analytics position for Graduate Students. I’m deeply interested in this opportunity since it summarizes my academic and professional interests, as you can tell by the degree I’m pursuing, with my prior experience as a consultant, during which  I managed several projects for the pharmaceutical and retail industries.'
+p1 <- 'I am Alejandro Alvarez, a graduate student at Carnegie Mellon University, currently pursuing a master’s degree in Information Systems. I’m applying for the Analytics Intern - Enterprise Analytics position for Graduate Students. I’m deeply interested in this opportunity since it summarizes my academic and professional interests in Analytics with my prior experience as a consultant, during which  I managed several projects for the pharmaceutical and retail industries.'
 
-p2 <- 'During the last six years, I had the opportunity to rebuild the Economic Consulting Team I led at the consulting firm I worked at, shifting the team’s orientation to a technical and data-driven one. When I joined the Economic Consulting Team of my firm, the common practice was to use MO Excel as our primary tool to conduct every step of our workflow, from the data-cleansing to the analytical stages. Six years later, and four since I took the team’s lead, we conducted larger-scale projects involving databases design, supervised and non-supervised methods for statistical analysis, the elaboration of reproducible documents, and interactive dashboards, and the systematic implementation of data processing, cleansing, and validation processes. All these improvements were possible thanks to the technological migration I carried out to establish the R Programming language as our primary analytical tool and Git as our main Version Control System. Moreover, a significant number of such projects were carried out for clients in the pharmaceutical, retail, and manufacturing industries.'
+p2 <- 'As I began my consulting career, I contributed to the development of different projects involving Analytics\' workflow stages. A particularly successful one was a study to measure the relation between the prevalence of overweight, obesity, and diabetes within certain groups of the Mexican population and their consumption of baked goods. I was in charge of the data gathering, cleansing, and validation processes in the early stages. Later, I got the opportunity to design statistical models to assess the core problem of the project. Our client well-received our findings, as different stakeholders also validated them within the industry and academic community. Also, such findings were an essential part of our client\'s lobbying strategy to mitigate an increase in this type of goods\' taxation rate.'
 
-p3 <- 'Further detail of my work experience and skills are listed in my resume. Still, I’ve mentioned these details to convince you that I have most of the qualifications you’re looking for, according to the job description. I have the tools and theoretical knowledge, exposure to working with the health industry, solid experience in communicating technical results to non-technical audiences, team-work skills, and deep curiosity and self-motivation to learn continuously.'
+p3 <- 'As such contributions to my team\'s projects continued, I was trusted by my team\'s partners to become the Senior Associate of the Economic Consulting Team at the firm. The last project I had the opportunity to lead was to measure the impact of a student\'s loan program in Mexico. In particular, we had the chance to carry out all the project stages, from the data generation process to the statistical analysis. The project\'s result was outstanding, as the foundation in charge of it managed to renew its collaboration agreement with the Mexican government, alluding to the results we generated.'
 
-p4 <- 'Without any further, I thank you very much for your time and consideration of this application, and please don’t hesitate to reach me. I look forward to hearing from you and, hopefully, to be part of a company like CVS Health, which enhances the health-services proximity to people by making data-driven decisions.'
+p4 <- 'After six years of continuous learning at my job as a consultant, I decided to enroll in the Information Systems and Management master\'s program at Carnegie Mellon University to formalize all the experiences and knowledge I got on an autodidact basis. A natural next step that would enrich this fantastic experience I am living at CMU would be to collaborate as an intern at CVS Health.'
+
+p5 <- 'Without any further, I thank you very much for your time and consideration of this application. I look forward to hearing from you and, hopefully, to be part of a company like CVS Health, which enhances the health-services proximity to people by making data-driven decisions.'
 
 ```
 
@@ -48,6 +50,7 @@ tribble(
     '', '', '', '', p2,
     '', '', '', '', p3,
     '', '', '', '', p4,
+    '', '', '', '', p5,
     '', '', '', '', goodbye,
     '', '', '', '', name,
 ) %>% detailed_entries(sp1, sp2, sp3, sp4, Text)
